WOW JS and Hover CSS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <link href="assets/css/font-awesome.css" rel="stylesheet">
         <!-- Magnific Popup core CSS file -->
         <link rel="stylesheet" href="assets/css/magnific-popup.css">
+        <!-- Hover.CSS file -->
+        <link rel="stylesheet" href="assets/css/hover-min.css">
+        <!-- Animate.CSS file -->
+        <link rel="stylesheet" href="assets/css/animate.css">
         <!-- GoogleFonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
         <!-- Custom CSS -->
@@ -28,7 +32,7 @@
     <body>
 
     <!-- Start Of NavBar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top wow fadeInDown">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -46,11 +50,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Downloads</a></li>
-                    <li><a href="#">Plans</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#"><i class="fa fa-search"></i></a></li>
+                    <li class="hvr-underline-from-left"><a href="#">Home</a></li>
+                    <li class="hvr-underline-from-left"><a href="#">Downloads</a></li>
+                    <li class="hvr-underline-from-left"><a href="#">Skills</a></li>
+                    <li class="hvr-underline-from-left"><a href="#">Projects</a></li>
+                    <li class="hvr-underline-from-left"><a href="#">Plans</a></li>
+                    <li class="hvr-underline-from-left"><a href="#"><i class="fa fa-search"></i></a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -61,9 +66,9 @@
         <div class="overlay">
             <div class="container">
                 <div class="row text-center">
-                    <h1 class="text-uppercase">free psd web template</h1>
-                    <p class="lead text-capitalize">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto asperiores deleniti harum iste libero nemo nulla perferendis placeat provident. Aperiam dolores et minus molestias neque nihil non optio sit.</p>
-                    <button class="btn btn-custome text-capitalize"><i class="fa fa-download"></i> download</button>
+                    <h1 class="text-uppercase wow fadeInDown" data-wow-delay=".1s">free psd web template</h1>
+                    <p class="lead text-capitalize wow fadeInDown" data-wow-delay=".2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto asperiores deleniti harum iste libero nemo nulla perferendis placeat provident. Aperiam dolores et minus molestias neque nihil non optio sit.</p>
+                    <button class="btn btn-custome text-capitalize wow fadeInDown" data-wow-delay=".3s"><i class="fa fa-download"></i> download</button>
                 </div>
             </div>
         </div>
@@ -76,15 +81,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="text-uppercase">just download it</h1>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore iure odio, officia sit tempore velit vero. Aperiam commodi consequuntur, est exercitationem laboriosam libero maiores, maxime praesentium quos repudiandae veritatis vitae.</p>
+                    <h1 class="text-uppercase wow fadeInLeft">just download it</h1>
+                    <p class="lead wow fadeInLeft" data-wow-delay=".1s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore iure odio, officia sit tempore velit vero. Aperiam commodi consequuntur, est exercitationem laboriosam libero maiores, maxime praesentium quos repudiandae veritatis vitae.</p>
                     <ul class="list-unstyled">
-                        <li>Duis aute irure dolor in reprehenderit in voluptate. </li>
-                        <li>Excepteur sint occaecat cupidatat non proident. </li>
-                        <li>Sed ut perspiciatis unde omnis iste natus error sit voluptatem. </li>
+                        <li class="wow fadeInLeft" data-wow-delay=".3s">Duis aute irure dolor in reprehenderit in voluptate. </li>
+                        <li class="wow fadeInLeft" data-wow-delay=".5s">Excepteur sint occaecat cupidatat non proident. </li>
+                        <li class="wow fadeInLeft" data-wow-delay=".7s">Sed ut perspiciatis unde omnis iste natus error sit voluptatem. </li>
                     </ul>
-                    <button class="btn btn-custome text-capitalize">read more</button>
-                    <img src="assets/img/macbook.png" alt="MacBook" class="img img-responsive visible-md visible-lg">
+                    <button class="btn btn-custome text-capitalize wow fadeInLeft" data-wow-delay=".9s">read more</button>
+                    <img src="assets/img/macbook.png" alt="MacBook" class="img img-responsive visible-md visible-lg wow fadeInLeft">
                 </div>
             </div>
         </div>
@@ -96,7 +101,7 @@
         <div class="container">
             <div class="row">
                 <!-- Feature -->
-                <div class="col-md-4">
+                <div class="col-md-4 wow zoomIn">
                     <div class="feat">
                         <i class="fa fa-3x fa-desktop"></i>
                         <div class="description">
@@ -107,7 +112,7 @@
                 </div>
                 <!-- Feature -->
                 <!-- Feature -->
-                <div class="col-md-4">
+                <div class="col-md-4 wow zoomIn" data-wow-delay=".2s">
                     <div class="feat">
                         <i class="fa fa-3x fa-camera-retro"></i>
                         <div class="description">
@@ -118,7 +123,7 @@
                 </div>
                 <!-- Feature -->
                 <!-- Feature -->
-                <div class="col-md-4">
+                <div class="col-md-4 wow zoomIn" data-wow-delay=".4s">
                     <div class="feat">
                         <i class="fa fa-3x fa-files-o"></i>
                         <div class="description">
@@ -129,7 +134,7 @@
                 </div>
                 <!-- Feature -->
                 <!-- Feature -->
-                <div class="col-md-4">
+                <div class="col-md-4 wow zoomIn" data-wow-delay=".6s">
                     <div class="feat">
                         <i class="fa fa-3x fa-mobile"></i>
                         <div class="description">
@@ -140,7 +145,7 @@
                 </div>
                 <!-- Feature -->
                 <!-- Feature -->
-                <div class="col-md-4">
+                <div class="col-md-4 wow zoomIn" data-wow-delay=".8s">
                     <div class="feat">
                         <i class="fa fa-3x fa-magic"></i>
                         <div class="description">
@@ -151,7 +156,7 @@
                 </div>
                 <!-- Feature -->
                 <!-- Feature -->
-                <div class="col-md-4">
+                <div class="col-md-4 wow zoomIn" data-wow-delay="1s">
                     <div class="feat">
                         <i class="fa fa-3x fa-share-alt"></i>
                         <div class="description">
@@ -169,8 +174,8 @@
     <!-- Start Of Projects -->
     <section id="projects">
         <div class="container">
-            <h1 class="text-center text-uppercase">projects</h1>
-            <ul class="menu list-inline">
+            <h1 class="text-center text-uppercase wow fadeInDown">projects</h1>
+            <ul class="menu list-inline wow fadeInDown">
                 <li class="filter selected active" data-filter="all">All</li>
                 <li class="filter" data-filter=".ux-ui">UI/UX</li>
                 <li class="filter" data-filter=".md">3D</li>
@@ -179,7 +184,7 @@
             <div id="plugin">
                 <div class="row">
                     <!-- Item -->
-                    <div class="col-md-4 mix md">
+                    <div class="col-md-4 mix md wow zoomIn">
                         <div class="item" href="assets/img/item.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -193,7 +198,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix graphic-design">
+                    <div class="col-md-4 mix graphic-design wow zoomIn">
                         <div class="item" href="assets/img/item2.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -207,7 +212,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix ux-ui">
+                    <div class="col-md-4 mix ux-ui wow zoomIn">
                         <div class="item" href="assets/img/item3.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -221,7 +226,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix graphic-design">
+                    <div class="col-md-4 mix graphic-design wow zoomIn">
                         <div class="item" href="assets/img/item4.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -235,7 +240,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix ux-ui">
+                    <div class="col-md-4 mix ux-ui wow zoomIn">
                         <div class="item" href="assets/img/item5.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -249,7 +254,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix md">
+                    <div class="col-md-4 mix md wow zoomIn">
                         <div class="item" href="assets/img/item6.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -271,13 +276,13 @@
     <!-- Start Of Plans -->
     <section id="plans">
         <div class="container text-center">
-            <h1 class="text-uppercase">plans</h1>
-            <p class="lead">
+            <h1 class="text-uppercase wow fadeInDown">plans</h1>
+            <p class="lead wow fadeInDown" data-wow-delay=".1s">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
             <div class="row">
                 <!-- Plan -->
-                <div class="col-md-4">
+                <div class="col-md-4 hvr-grow wow zoomIn" data-wow-delay=".2s">
                     <div class="plan">
                         <h4 class="text-uppercase">basic plan</h4>
                         <p class="price"><span><i>$</i>25</span>/mon</p>
@@ -286,7 +291,7 @@
                 </div>
                 <!-- Plan -->
                 <!-- Plan -->
-                <div class="col-md-4">
+                <div class="col-md-4 hvr-grow wow zoomIn" data-wow-delay=".3s">
                     <div class="plan">
                         <h4 class="text-uppercase">professional plan</h4>
                         <p class="price"><span><i>$</i>25</span>/mon</p>
@@ -295,7 +300,7 @@
                 </div>
                 <!-- Plan -->
                 <!-- Plan -->
-                <div class="col-md-4">
+                <div class="col-md-4 hvr-grow wow zoomIn" data-wow-delay=".4s">
                     <div class="plan">
                         <h4 class="text-uppercase">professional+ plan</h4>
                         <p class="price"><span><i>$</i>25</span>/mon</p>
@@ -305,12 +310,12 @@
                 <!-- Plan -->
             </div>
             <div class="contact">
-                <i class="fa fa-4x fa-question"></i>
-                <h3 class="text-uppercase">got questions?</h3>
-                <p class="lead text-capitalize">contact our customer support team if you have any further questions. we are here to help you out!</p>
+                <i class="fa fa-4x fa-question wow fadeInDown"></i>
+                <h3 class="text-uppercase wow fadeInDown">got questions?</h3>
+                <p class="lead text-capitalize wow fadeInDown">contact our customer support team if you have any further questions. we are here to help you out!</p>
                 <ul class="list-inline">
-                    <li><i class="fa fa-envelope"></i> support@free.com</li>
-                    <li><i class="fa fa-phone"></i> +48 504 176 933</li>
+                    <li class="wow fadeInDown"><i class="fa fa-envelope"></i> support@free.com</li>
+                    <li class="wow fadeInDown"><i class="fa fa-phone"></i> +48 504 176 933</li>
                 </ul>
             </div>
         </div>
@@ -320,7 +325,7 @@
     <!-- Start Of Testimonials -->
     <section id="testimonials" class="text-center">
         <div class="overlay">
-            <div class="container">
+            <div class="container  wow fadeInDown" data-wow-delay=".2s">
                 <h1 class="text-uppercase">What our clients say</h1>
                 <!-- Start Of Carousel -->
                 <div id="carousel_testimonials" class="carousel slide" data-ride="carousel">
@@ -374,9 +379,9 @@
     <!-- Start Of Free -->
     <section id="free" class="text-center">
         <div class="container">
-            <h1 class="text-uppercase">download this template for free</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias atque commodi ipsum itaque quam quisquam sit. Consectetur dolorum ducimus eos et fugit possimus, qui quis quo velit veritatis, voluptas?</p>
-            <button class="btn btn-custome"><i class="fa fa-download"></i> Download</button>
+            <h1 class="text-uppercase wow fadeInDown">download this template for free</h1>
+            <p class="wow fadeInDown" data-wow-delay=".1s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias atque commodi ipsum itaque quam quisquam sit. Consectetur dolorum ducimus eos et fugit possimus, qui quis quo velit veritatis, voluptas?</p>
+            <button class="btn btn-custome wow fadeInDown" data-wow-delay=".2s"><i class="fa fa-download"></i> Download</button>
         </div>
     </section>
     <!-- End Of Free -->
@@ -395,6 +400,8 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <!-- MixitUp -->
     <script src="assets/js/mixitup.min.js"></script>
+    <!-- MixitUp -->
+    <script src="assets/js/wow.min.js"></script>
     <!-- Plugins.JS -->
     <script src="assets/js/plugins.js"></script>
     </body>
