--- a/index.html
+++ b/index.html
@@ -50,12 +50,18 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="hvr-underline-from-left"><a href="#">Home</a></li>
-                    <li class="hvr-underline-from-left"><a href="#">Downloads</a></li>
-                    <li class="hvr-underline-from-left"><a href="#">Skills</a></li>
-                    <li class="hvr-underline-from-left"><a href="#">Projects</a></li>
-                    <li class="hvr-underline-from-left"><a href="#">Plans</a></li>
-                    <li class="dropdown">
+                    <li class="hvr-underline-from-left"><a data-scroll href="#header">Home</a></li>
+                    <li class="hvr-underline-from-left"><a data-scroll href="#download">Downloads</a></li>
+                    <li class="hvr-underline-from-left"><a data-scroll href="#features">Skills</a></li>
+                    <li class="hvr-underline-from-left"><a data-scroll href="#projects">Projects</a></li>
+                    <li class="hvr-underline-from-left"><a data-scroll href="#plans">Plans</a></li>
+                    <li class="visible-md visible-xs visible-sm">
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon1"><i class="fa fa-search"></i></span>
+                            <input type="search" class="form-control" placeholder="Search">
+                        </div>
+                    </li>
+                    <li class="dropdown visible-md visible-lg">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <i class="fa fa-search"></i>
                         </a>
@@ -196,7 +202,7 @@
             <div id="plugin">
                 <div class="row">
                     <!-- Item -->
-                    <div class="col-md-4 mix md">
+                    <div class="col-md-4 col-xs-6 mix md">
                         <div class="item" href="assets/img/item.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -210,7 +216,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix graphic-design">
+                    <div class="col-md-4 col-xs-6 mix graphic-design">
                         <div class="item" href="assets/img/item2.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -224,7 +230,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix ux-ui">
+                    <div class="col-md-4 col-xs-6 mix ux-ui">
                         <div class="item" href="assets/img/item3.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -238,7 +244,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix graphic-design">
+                    <div class="col-md-4 col-xs-6 mix graphic-design">
                         <div class="item" href="assets/img/item4.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -252,7 +258,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix ux-ui">
+                    <div class="col-md-4 col-xs-6 mix ux-ui">
                         <div class="item" href="assets/img/item5.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -266,7 +272,7 @@
                     </div>
                     <!-- Item -->
                     <!-- Item -->
-                    <div class="col-md-4 mix md">
+                    <div class="col-md-4 col-xs-6 mix md">
                         <div class="item" href="assets/img/item6.jpg">
                             <div class="overlay">
                                 <i class="fa fa-2x fa-search-plus"></i>
@@ -294,7 +300,7 @@
             </p>
             <div class="row">
                 <!-- Plan -->
-                <div class="col-md-4 hvr-pulse">
+                <div class="col-md-4 col-xs-12 hvr-pulse">
                     <div class="plan">
                         <h4 class="text-uppercase">basic plan</h4>
                         <p class="price"><span><i>$</i>25</span>/mon</p>
@@ -303,7 +309,7 @@
                 </div>
                 <!-- Plan -->
                 <!-- Plan -->
-                <div class="col-md-4 hvr-pulse">
+                <div class="col-md-4 col-xs-12 hvr-pulse">
                     <div class="plan">
                         <h4 class="text-uppercase">professional plan</h4>
                         <p class="price"><span><i>$</i>25</span>/mon</p>
@@ -312,7 +318,7 @@
                 </div>
                 <!-- Plan -->
                 <!-- Plan -->
-                <div class="col-md-4 hvr-pulse">
+                <div class="col-md-4 col-xs-12 hvr-pulse">
                     <div class="plan">
                         <h4 class="text-uppercase">professional+ plan</h4>
                         <p class="price"><span><i>$</i>25</span>/mon</p>
@@ -404,6 +410,14 @@
     </footer>
     <!-- End Of Footer -->
 
+    <!-- Start Of ScrollTop -->
+    <div id="scroll">
+        <a data-scroll href="#header" >
+            <i class="fa fa-4x fa-arrow-circle-up" aria-hidden="true"></i>
+        </a>
+    </div>
+    <!-- End Of ScrollTop -->
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="assets/js/jquery.min.js"></script>
     <!-- Magnific Popup core JS file -->
@@ -412,6 +426,10 @@
     <script src="assets/js/mixitup.min.js"></script>
     <!-- WOW JS -->
     <script src="assets/js/wow.min.js"></script>
+    <!-- NiceScroll Core JS File -->
+    <script src="assets/js/jquery.nicescroll.min.js"></script>
+    <!-- SmoothScroll Core JS File -->
+    <script src="assets/js/smooth-scroll.min.js"></script>
     <!-- Bootstrap Core JS File -->
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- Plugins.JS -->
